# libSDL2pp

./: .appveyor.yml  .gitignore  .travis.yml  CHANGES.md  CMakeLists.txt  COPYING.txt  Doxyfile  Doxyfile.in  FindSDL2PP.cmake.in  README.md  SDL2ppConfig.cmake.in  sdl2pp.pc.in
.github/workflows/: ci.yml  doxygen.yml
SDL2pp/: Audio.hh  AudioDevice.cc  AudioDevice.hh  AudioLock.cc  AudioSpec.cc  AudioSpec.hh  Chunk.cc  Chunk.hh  Color.cc  Color.hh  Config.hh.in  ContainerRWops.hh  Cursor.cc  Cursor.hh  Display.cc  Display.hh  Event.cc  Event.hh  EventPolling.cc  EventPolling.hh  EventWait.cc  EventWait.hh  Exception.cc  Exception.hh  ExtraRWops.hh  Font.cc  Font.hh  Mixer.cc  Mixer.hh  Music.cc  Music.hh  Optional.hh  Point.cc  Point.hh  RWops.cc  RWops.hh  Rect.cc  Rect.hh  Renderer.cc  Renderer.hh  (+23 more)
SDL2pp/Private/: EventDispatching.hh  EventHandler.hh  EventHandlerFunctor.hh  EventHandlerObject.hh  EventTypeFilters.hh  Utility.hh
cmake/: AppendCXXFlagIfSupported.cmake  CheckCompile.cmake  EnableCXXFlagIfSupported.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake  Join.cmake  SDL2ppConfig.cmake.in  attribute_deprecated_test.cc  std_experimental_optional_test.cc
demo/: demo.cc  lines.cc  rendertarget.cc
demos/: CMakeLists.txt  audio_sine.cc  audio_wav.cc  image.cc  lines.cc  rendertarget.cc  sprites.cc
doxygen/: doxyfile
examples/: CMakeLists.txt  audio_sine.cc  audio_wav.cc  cursor.cc  fill.cc  image.cc  lines.cc  mixer.cc  mixer_effects.cc  mixer_music.cc  mixer_music_sine.cc  rendertarget.cc  sprites.cc  ttf.cc
exttests/cmake/: CMakeLists.txt
exttests/pkg-config/: Makefile
testdata/: README.md
tests/: CMakeLists.txt  gui_rendering.cc  hdr_point.cc  hdr_renderer.cc  hdr_sdl2pp.cc  header_audio.cc  header_containerrwops.cc  header_exception.cc  header_extrarwops.cc  header_rect.cc  header_rwops.cc  header_sdl.cc  header_streamrwops.cc  header_test.cc.in  header_texture.cc  header_wav.cc  header_window.cc  live_audiodevice.cc  live_mixer.cc  live_rendering.cc  live_window.cc  movetest.hh  test_color.cc  test_color_constexpr.cc  test_error.cc  test_eventdispatching.cc  test_eventhandler.cc  test_eventpolling.cc  test_eventwait.cc  test_font.cc  test_optional.cc  test_pointrect.cc  test_pointrect_constexpr.cc  test_rwops.cc  test_surface.cc  test_utility.cc  test_wav.cc  testing.h
