PROJECT(libSDL2pp)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(SDL2PP REQUIRED)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

INCLUDE_DIRECTORIES(${SDL2PP_INCLUDE_DIRS})
ADD_EXECUTABLE(cmake-ext-test ../../examples/sprites.cc)
TARGET_LINK_LIBRARIES(cmake-ext-test ${SDL2PP_LIBRARIES})
